[fix][broker] Fix NPE when set `AutoTopicCreationOverride` (#15653)
(cherry picked from commit e2afcf0a7ee90908fa647656624aacb9fd93249c)